--- a/catalog.html
+++ b/catalog.html
@@ -9,21 +9,25 @@
 </head>
 
 <body>
-    <header class="main-header">
-        <div class="header-wrapper">
-          <div class="header-box">
-            <a href="index.html" class="logo">Техномарт</a>
-            <form class="form-search" action="https://echo.htmlacademy.ru" method="GET">
-              <label for="search">
-              <svg class="search-image" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"><path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"></path></svg>
-              </label>
-              <input class="search-field" id="search" type="search" name="search" placeholder="Поиск:">
-            </form>
-            <div class="users-panel">
-              <a class="button-panel button-bookmark" href="#">Закладки: 0</a></li>
-              <a class="button-panel button-backet" href="#">Корзина: 0</a></li>
-              <a class="button-panel panel-green" href="#">Оформить заказ</a></li>
-            </div>
+  <header class="main-header">
+    <div class="header-wrapper">
+      <div class="header-box">
+        <a href="index.html" class="logo">Техномарт</a>
+        <form class="form-search" action="https://echo.htmlacademy.ru" method="GET">
+          <label for="search">
+            <svg class="search-image" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+              <path
+                d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z">
+              </path>
+            </svg>
+          </label>
+          <input class="search-field" id="search" type="search" name="search" placeholder="Поиск:">
+        </form>
+        <div class="users-panel">
+          <a class="button-panel button-bookmark" href="#">Закладки: 0</a>
+          <a class="button-panel button-backet backet-buy" href="#">Корзина: 10</a>
+          <a class="button-panel panel-green" href="#">Оформить заказ</a>
+        </div>
       </div>
     </div>
     <div class="header-middle">
@@ -79,72 +83,85 @@
 
     <div class="catalog-wrapper">
       <section class="select-box">
-        <ul class="filter-list">
-          <li class="sorting-text">
-            <p>Фильтр:</p>
-          </li>
-        </ul>
-        <p class="filter-prise">Цена:</p>
-        <div class="selector">
-        <h3 class="multiselect-headline">Производители:</h3>
-          <div class="checkbox">
-              <input type="checkbox" id="bosch" checked>
-              <label for="bosch">bosch</label>
-
-              <input type="checkbox" id="interskol">
-              <label for="interskol">интерскол</label>
-
-              <input type="checkbox" id="makita" checked>
-              <label for="makita">makita</label>
-
-              <input type="checkbox" id="dewalt">
-              <label for="dewalt">dewalt</label>
-
-              <input type="checkbox" id="hitachi">
-              <label for="hitachi">hitachi</label>
-            </div>
-          </div>
-          <div class="filter-2">
-              <h3 class="multiselect-headline">питание:</h3>
-              <div class="batter-selector">
-                <input type="radio" id="adaptive" name="grup" checked>
-                <label for="adaptive">аккумуляторные</label>
-
-                <input type="radio" id="fixed" name="grup">
-                <label for="fixed">сетевые</label>
+        <h4>Выбор производителя и питания</h4>
+          <div class="filter-list">фильтр:</div>
+        <section class="cost">
+            <h3>цена:</h3>
+            <div class="range-control">
+              <div class="range">
+                <div class="slider-range"></div>
               </div>
+              <div class="circle circle-left"></div>
+              <div class="circle circle-right"></div>
             </div>
+            <label class="min-price">
+              <input name="price" type="text" value="0">
+            </label>
+            <span>—</span>
+            <label class="max-price">
+              <input name="price" type="text" value="30000">
+            </label>
+          </section>
+        <div class="selector">
+          <h3 class="multiselect-headline">Производители:</h3>
+          <div class="checkbox">
+            <form class="checkbox" action="https://echo.htmlacademy.ru" method="GET">
+            <input type="checkbox" id="bosch" name="bosch" checked>
+            <label for="bosch">bosch</label>
+
+            <input type="checkbox" id="interskol" name="interskol">
+            <label for="interskol">интерскол</label>
+
+            <input type="checkbox" id="makita" name="makita" checked>
+            <label for="makita">makita</label>
+
+            <input type="checkbox" id="dewalt" name="dewalt">
+            <label for="dewalt">dewalt</label>
+
+            <input type="checkbox" id="hitachi" name="hitachi">
+            <label for="hitachi">hitachi</label>
+          </form>
+          </div>
+        </div>
+        <div class="filter-2">
+          <h3 class="multiselect-headline">питание:</h3>
+          <div class="batter-selector">
+            <input type="radio" id="adaptive" name="batter" value="Аккумуляторные" checked>
+            <label for="adaptive">аккумуляторные</label>
+
+            <input type="radio" id="fixed" name="batter" value="Сетевые">
+            <label for="fixed">сетевые</label>
+          </div>
+          <button class="button-filter" type="submit">показать</button>
+        </div>
       </section>
 
       <section class="perforator-catalog">
+        <h4>Каталог перфораторов</h4>
         <div class="sorting-wrapper">
           <div class="conteiner">
-          <ul class="sorting-list">
-            <li class="sorting-text">
-              <p>Сортировка:</p>
-            </li>
-          </ul>
-          <ul class="sorting-list">
-            <li class="sorting-item"><a class="sorting-button" href="#">по цене</a></li>
-            <li class="sorting-item"><a class="sorting-button dotted-button" href="#">по типу</a></li>
-            <li class="sorting-item"><a class="sorting-button dotted-button" href="#">по функционалу</a></li>
-          </ul>
-          <div class="assortment">
-						<a class="arrow-up" href="#"></a>
-						<a class="arrow-down" href="#"></a>
-						</div>
+                <span>Сортировка:</span>
+                <div class="sorting-buttons">
+             <a class="sorting-button" href="#">по цене</a>
+             <a class="sorting-button dotted-button" href="#">по типу</a>
+             <a class="sorting-button dotted-button" href="#">по функционалу</a>
+            </div>
+            <div class="assortment">
+              <a class="arrow-up" href="#"></a>
+              <a class="arrow-down" href="#"></a>
+            </div>
+          </div>
         </div>
-      </div>
-
         <div class="perforator-catalog">
-
           <article class="arcticle">
             <div class="actions">
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg3.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 3000">
-            <h3 class="item-headline">Перфоратор BOSCH BFG 3000</h3>
+            <div class="item-img">
+           <img src="img/perforatorbfg3.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 3000">
+          </div>
+           <h3 class="item-headline">Перфоратор BOSCH BFG 3000</h3>
             <p class="price-discount">22500 Р .</p>
             <div class="prise-wrapper">
               <p class="price">15500 Р .</p>
@@ -156,7 +173,9 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
+            <div class="item-img">
             <img class="item-img" src="img/perforatorbfg6.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 6000">
+          </div>
             <h3 class="item-headline">Перфоратор BOSCH BFG 6000</h3>
             <p class="price-discount">30500 Р .</p>
             <div class="prise-wrapper">
@@ -169,7 +188,9 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg2.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 2000">
+            <div class="item-img">
+            <img src="img/perforatorbfg2.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 2000">
+          </div>
             <h3 class="item-headline headline-bfg">Перфоратор BOSCH BFG 2000 </h3>
             <div class="prise-wrapper">
               <p class="price">12500 Р .</p>
@@ -181,7 +202,9 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg3.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 3000">
+            <div class="item-img">
+            <img  src="img/perforatorbfg3.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 3000">
+          </div>
             <h3 class="item-headline">Перфоратор BOSCH BFG 3000</h3>
             <p class="price-discount">22500 Р .</p>
             <div class="prise-wrapper">
@@ -194,7 +217,9 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg6.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 6000">
+            <div class="item-img">
+            <img  src="img/perforatorbfg6.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 6000">
+          </div>
             <h3 class="item-headline">Перфоратор BOSCH BFG 6000</h3>
             <p class="price-discount">30500 Р .</p>
             <div class="prise-wrapper">
@@ -207,7 +232,9 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg2.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 2000">
+            <div class="item-img">
+            <img  src="img/perforatorbfg2.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 2000">
+          </div>
             <h3 class="item-headline headline-bfg">Перфоратор BOSCH BFG 2000 </h3>
             <div class="prise-wrapper">
               <p class="price">12500 Р .</p>
@@ -219,7 +246,9 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg3.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 3000">
+            <div class="item-img">
+            <img  src="img/perforatorbfg3.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 3000">
+          </div>
             <h3 class="item-headline">Перфоратор BOSCH BFG 3000</h3>
             <p class="price-discount">22500 Р .</p>
             <div class="prise-wrapper">
@@ -232,7 +261,9 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg6.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 6000">
+            <div class="item-img">
+            <img  src="img/perforatorbfg6.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 6000">
+          </div>
             <h3 class="item-headline">Перфоратор BOSCH BFG 6000</h3>
             <p class="price-discount">30500 Р .</p>
             <div class="prise-wrapper">
@@ -245,35 +276,47 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg2.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 2000">
+            <div class="item-img">
+            <img src="img/perforatorbfg2.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 2000">
+          </div>
             <h3 class="item-headline headline-bfg">Перфоратор BOSCH BFG 2000 </h3>
             <div class="prise-wrapper">
               <p class="price">12500 Р .</p>
             </div>
           </article>
+
         </div>
-    </div>
-    </section>
-    <div class="list-wrapper">
-      <ul class="page-list">
-        <li class="page-item"><a class="page-first" href="#" aria-label="Страница ">1</a></li>
-        <li class="page-item"><a class="page-number" href="#" aria-label="Страница ">2</a></li>
-        <li class="page-item"><a class="page-number" href="#" aria-label="Страница ">3</a></li>
-        <li class="page-item"><a class="page-number">Следующая</a></li>
-      </ul>
+          <ul class="page-list">
+            <li class="page-number page-active"><a href="#" aria-label="Страница ">1</a></li>
+            <li class="page-number"><a href="#" aria-label="Страница ">2</a></li>
+            <li class="page-number"><a href="#" aria-label="Страница ">3</a></li>
+            <li class="page-number"><a href="#">Следующая</a></li>
+          </ul>
+      </section>
     </div>
 
-
+<div class="modal-buy">
+  <div class="top-write">
+  <p>Товар добавлен в корзину!</p>
+  </div>
+  <div class="close"></div>
+  <div class="send">
+      <a class="button-order" href="#">Оформить заказ</a>
+      <a class="button-continue" href="#">Продолжить покупки</a>
+  </div>
+</div>
     <section class="perforator-info">
-      <p class="perforator-text">Пара слов о перфораторах</p>
+      <div class="text-wrapper">
+      <h2 class="perforator-text">Пара слов о перфораторах</h2>
       <p class="perforator-decryption">
-        Перфоратор-универсальный строительный инструмент. Предназначен для сверления и долбления отверстия в кирпиче,
-        бетоне и камне.
+        Перфоратор - универсальный строительный инструмент. Предназначен для сверления и долбления отверстия в кирпиче,
+        бетоне и камне.<br>
         существует электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели,
-        шуруповерта и отбойного молотка. В
+        шуруповерта и отбойного молотка. В <br>
         асортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная
         дрель.
       </p>
+    </div>
     </section>
 
     <div class="visually-hidden">
@@ -339,6 +382,7 @@
       </div>
     </div>
   </footer>
+  <script src="js/buypopup.js"></script>
 </body>
 
 </html>
